--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -2,12 +2,12 @@ baseurl: https://example.com
 languageCode: en-us
 theme: hugo-theme-stack
 paginate: 5
-title: Coucou's blog
+title: YKylin的博客
 
 languages:
     en:
         languageName: English
-        title: Coucou's blog
+        title: YKylin's blog
         weight: 1
     zh-cn:
         languageName: 中文
@@ -54,7 +54,7 @@ params:
 
     sidebar:
         emoji: 🍥
-        subtitle: 这是Coucou的博客网站
+        subtitle: 这是YKylin的博客网站，公主殿下是EXP
         avatar:
             enabled: true
             local: true
