--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -58,7 +58,7 @@ params:
         avatar:
             enabled: true
             local: true
-            src: img/avatar.png
+            src: img/pandas.png
 
     article:
         math: false
@@ -66,7 +66,7 @@ params:
         readingTime: true
         license:
             enabled: true
-            default: Licensed under CC BY-NC-SA 4.0
+            default: Licensed under YQL BY-NC-SA 4.0
 
     comments:
         enabled: true
